--- a/install_apache.yml
+++ b/install_apache.yml
@@ -1,54 +1,22 @@
 ---
 
-# begining of a statment or block will begin with - 
-# so we want to run against every server
 - hosts: all
   become: true
-  # it will define list of tasks
   tasks:
 
-  - name: update repository index for Ubuntu
-    apt:
+  - name: install apache and php for Ubuntu servers
+    apt: 
+      name:
+        - apache2
+        - libapache-mod-php
+      state: latest
       update_cache: yes
     when: ansible_distribution == "Ubuntu"
 
-  # we give it a name which should be descriptive
-  - name: install apache2 package for Ubuntu
-    # apt is module we want to use
-    apt: 
-      name: apache2
-      state: latest
-    when: ansible_distribution == "Ubuntu"
-
-  - name: Add php support for apache for Ubuntu
-    apt: 
-      name: libapache2-mod-php
-      state: latest
-    when: ansible_distribution == "Ubuntu"
-  # - name: Collect facts about system services
-  #   service_facts:
-  #     register: services_state
-
-  # - name: Debug
-  #   debug:
-  #     var: services_state
-
-
-  # For CentOS
-  - name: update repository index for CentOS
+  - name: install apache and php for CentOS servers
     dnf:
-      update_cache: yes
-    when: ansible_distribution_version == "CentOS"
-
-  - name: install apache2 package for CentOS
-    # Now dnf is module we want to use
-    dnf: 
-      name: httpd
-      state: latest
-    when: ansible_distribution == "CentOS"
-
-  - name: Add php support for apache for CentOS
-    dnf: 
-      name: php
+      name:
+        - httpd
+        - php
       state: latest
     when: ansible_distribution == "CentOS"
