--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,4 +1,6 @@
 [defaults]
 inventory = inventory
-private_key_file = ~/ansible-course/server-1_key.pem
-# ansible_user = azureuser
+# private_key_file = ~/ansible-course/server-1_key.pem
+# remote_user = azureuser
+private_key_file = /home/matthew/.ssh/id_ed25519
+remote_user = simone
