--- a/roles/base/tasks/main.yml
+++ b/roles/base/tasks/main.yml
@@ -2,3 +2,13 @@
   authorized_key:
     user: simone
     key: "ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAIEF5bvFWct5CY2Fea3zo4+9lYmgyuWrnLbe/F4lTImq1 mat default"
+
+- name: generate sshd_config file from template
+  tags: ssh
+  template:
+    src: "{{ ssh_template_file }}"
+    dest: /etc/ssh/sshd_config
+    owner: root
+    group: root
+    mode: 0644
+  notify: restart_sshd
